<resources>
    <string name="app_name">Afinador de Guitarra</string>
    <string name="hello">Digitar una cuerda</string>
    <string name="e1"> E</string>
    <string name="a"> A</string>
    <string name="d"> D</string>
    <string name="g"> G</string>
    <string name="b"> B</string>
    <string name="e2"> e</string>
    <string name="salir">Salir</string>
    <string name="imagen">Guitar Image</string>
</resources>